# manipulation_recorder

./: CMakeLists.txt  README.md  package.xml
config/: default.yaml
include/: common.h  hdf5_reader.h  hdf5_recorder.h
launch/: publish_joint.launch  record.launch
src/: hdf5_reader.cc  hdf5_recorder.cc  image_pub_test.cc  joint_state_publisher.cc  receive_test.cc  ros_recorder.cc
test/: 01_read_dataset.cc  02_create_hdf5.cc  03_image_debug.cc  ros_recorder.cc
