<?xml version="1.0"?>
<package format="2">
  <name>hdf5_recorder</name>
  <version>0.0.1</version>
  <description>A package for recording and reading HDF5 files with ROS integration</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS Dependencies -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- System Dependencies -->
  <build_depend>libhdf5-dev</build_depend>
  <exec_depend>libhdf5</exec_depend>
  
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>libopencv</exec_depend>

  <build_depend>eigen</build_depend>
  <exec_depend>eigen</exec_depend>

  <build_depend>libfmt-dev</build_depend>
  <exec_depend>libfmt</exec_depend>

</package> 